--- a/DAY7/nodeadminapp/views/article/create.ejs
+++ b/DAY7/nodeadminapp/views/article/create.ejs
@@ -1,3 +1,4 @@
+<!-- 신규 게시글 등록하는 HTML -->
 <!DOCTYPE html>
 <html>
 
@@ -107,13 +108,15 @@
 
             <!--우측 콘텐츠 영역 -->
             <div class="wrapper wrapper-content">
+            <form id="articleForm" action='/article/create' method="post">
                 <div class="ibox-content m-b-sm border-bottom">
 
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="form-group">
                                 <label class="control-label">글 제목</label>
-                                <input type="text" id='title' name='title' class="form-control">
+                                <input type="text" id='title' name='title' class="form-control"> 
+                                <!-- id='title'는 FE에서 제어, name은 BE에서 제어하기 위한 것 -->
                             </div>
                         </div>
                     </div>
@@ -132,7 +135,7 @@
                         <div class="col-sm-3">
                             <div class="form-group">
                                 <label class="control-label">게시여부</label>
-                                <select class="form-control">
+                                <select class="form-control" id="display_yn" name="display_yn">
                                     <option value="Y">게시함</option>
                                     <option value="N">게시 안함</option>
                                 </select>
@@ -142,11 +145,13 @@
                     </div>
 
                     <div class="text-center">
-                        <button type="button" class="btn btn-primary">저장</button>
+                        <button type="submit" class="btn btn-primary">저장</button> 
                         <a href="/article/list" class="btn btn-info">목록</a>
                     </div>
 
                 </div>
+            </form>
+
             </div>
 
             <!--우측 하단 풋터 영역-->
@@ -178,8 +183,26 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-    <script>
+    <!-- 위에 Jquery 임포트했기 때문에 아래 스크립트 Jquery로 작성하면 됨 -->
+    <script> // Jquery 스크립트 작성. 
+        // document는 사용자 PC RAM에 적재되어 있는 DOM를 의미 
+        // 서버에서 전달된 웹 페이지가 웹브라우저에 렌더링 완료되면 사용자 커서를 제목 영역으로 옮겨줌. 
+        $(document).ready(function(){
+            $('#title').focus();
+        });
 
+        // article form 태그에서 onsubmit 이벤트가 발생하면 캐치해 작동되는 함수 작성
+        // form 태그 내 각종 입력 요소들의 유효성 검사를 실시 후 action에 저장된 페이지로 데이터를 보내도록 하기 
+        // #는 태그 검색 prefix
+        $('#articleForm').submit(function(){
+            if($('#title').val() == ''){ // 제목 name 요소가 비어 있으면 
+                alert('제목을 입력해 주세요.');
+                $('#title').focus(); // 확인 버튼 눌렀을 때 해당 요소에 커서 옮겨놓기 
+                return false; // 서버로 안넘어가고 멈춤. 
+            }
+
+            return true;
+        });
     </script>
 
 </body>
