--- a/DAY7/nodeadminapp/views/article/modify.ejs
+++ b/DAY7/nodeadminapp/views/article/modify.ejs
@@ -107,6 +107,7 @@
 
             <!--우측 콘텐츠 영역 -->
             <div class="wrapper wrapper-content">
+            <form id="articleForm" action="/article/modify/<%=article.aid%>" method="post">
                 <div class="ibox-content m-b-sm border-bottom">
 
                     <div class="row">
@@ -132,7 +133,7 @@
                         <div class="col-sm-3">
                             <div class="form-group">
                                 <label class="control-label">게시여부</label>
-                                <select class="form-control">
+                                <select class="form-control" id="display_yn" name="display_yn">
                                     <option value="Y" <% if(article.display_yn == "Y"){ %>selected<% } %>> 게시함</option>
                                     <option value="N" <% if(article.display_yn == "N"){ %>selected<% } %>> 게시 안함</option>
                                 </select>
@@ -141,12 +142,17 @@
                         </div>
                     </div>
 
+                    <!-- 등록/목록 버튼 영역 -->
                     <div class="text-center">
-                        <button type="button" class="btn btn-primary">저장</button>
+                        <button type="submit" class="btn btn-primary">저장</button>
                         <a href="/article/list" class="btn btn-info">목록</a>
+                        
+                        <!-- article.js의 라우터 내부에서 req.body를 통해 form요소에서 데이터 추출하는 것처럼 name 추출 가능.  -->
+                        <input type="hidden" name='aid' value="<%=article.aid%>" /> 
                     </div>
 
                 </div>
+            </form>
             </div>
 
             <!--우측 하단 풋터 영역-->
@@ -178,8 +184,25 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-    <script>
+    <script> // Jquery 스크립트 작성. 
+        // document는 사용자 PC RAM에 적재되어 있는 DOM를 의미 
+        // 서버에서 전달된 웹 페이지가 웹브라우저에 렌더링 완료되면 사용자 커서를 제목 영역으로 옮겨줌. 
+        $(document).ready(function(){
+            $('#title').focus();
+        });
 
+        // article form 태그에서 onsubmit 이벤트가 발생하면 캐치해 작동되는 함수 작성
+        // form 태그 내 각종 입력 요소들의 유효성 검사를 실시 후 action에 저장된 페이지로 데이터를 보내도록 하기 
+        // #는 태그 검색 prefix
+        $('#articleForm').submit(function(){
+            if($('#title').val() == ''){ // 제목 name 요소가 비어 있으면 
+                alert('제목을 입력해 주세요.');
+                $('#title').focus(); // 확인 버튼 눌렀을 때 해당 요소에 커서 옮겨놓기 
+                return false; // 서버로 안넘어가고 멈춤. 
+            }
+
+            return true;
+        });
     </script>
 
 </body>
