--- a/DAY12/nodeadminapp/views/article/create.ejs
+++ b/DAY12/nodeadminapp/views/article/create.ejs
@@ -136,8 +136,8 @@
                             <div class="form-group">
                                 <label class="control-label">게시여부</label>
                                 <select class="form-control" id="display_yn" name="display_yn">
-                                    <option value="Y">게시함</option>
-                                    <option value="N">게시 안함</option>
+                                    <option value="1">게시함</option>
+                                    <option value="0">게시 안함</option>
                                 </select>
 
                             </div>
@@ -146,7 +146,7 @@
 
                     <div class="text-center">
                         <button type="submit" class="btn btn-primary">저장</button> 
-                        <a href="/article/list" class="btn btn-info">목록</a>
+                        <a href="/article/list" class="btn btn-info">목록</a> 
                     </div>
 
                 </div>
