errorfix for DAY12
delete API 작동 안하는 문제 수정

--- a/DAY12/nodeadminapp/views/article/modify.ejs
+++ b/DAY12/nodeadminapp/views/article/modify.ejs
@@ -149,7 +149,7 @@
                         <button type="button" id="btnDelete" class="btn btn-danger">삭제</button>
                         
                         <!-- article.js의 라우터 내부에서 req.body를 통해 form요소에서 데이터 추출하는 것처럼 name 추출 가능.  -->
-                        <input type="hidden" name='aid' value="<%=article.article_id%>" /> 
+                        <input type="hidden" name='aid' id="aid" value="<%=article.article_id%>" /> 
                     </div>
 
                 </div>
