--- a/DAY12-14/nodeadminapp/views/login.ejs
+++ b/DAY12-14/nodeadminapp/views/login.ejs
@@ -51,6 +51,13 @@
     <script src="/js/jquery-3.1.1.min.js"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.js"></script>
+    <script>
+        var loginMsg = '<%=loginResult%>'
+
+        if(loginMsg.length > 0){
+            alert(loginMsg)
+        }
+    </script>
 
 </body>
 
