--- a/DAY15/nodechatapp/views/groupchat.ejs
+++ b/DAY15/nodechatapp/views/groupchat.ejs
@@ -9,10 +9,15 @@
         <h1>채팅방 안에서 채팅하기</h1>
         채팅방이름: <input type="text" id="channelId" value="channel1"/>
         <button id="btnEntry">입장하기</button><br>
+        <button id="btnExit">채팅방 퇴장하기</button><br>
         
         대화명: <input type="text" id="nickName" value="창훈"/><br>
         메시지: <input type="text" id="message"/><br/>
         <input type="button" id="btnSend" value="전송"/><br/>
+        
+        <!-- 서버와 연결된 소켓 연결 종료 -->
+        <hr>
+        <input type="button" id="btnSend" value="채팅종료"/>
 
         <!-- 채팅 이력 보기 -->
         <ul id="chatHistory">
@@ -40,8 +45,28 @@
                 socket.emit('entry', channelId, nickName)
             })
 
+            // 채팅방 퇴장하기 (서버와의 연결 상태 유지)
+            $('#btnExit').click(function(){
+                // 채팅방 아이디 추출하기 
+                var channelId = $('#channelId').val()
+                var nickName = $('#nickName').val()
+
+                // 서버 이벤트 수신기 정의하기: 서버의 socket.js 내 'entry' 이벤트 수신기를 호출. 
+                socket.emit('exit', channelId, nickName)
+            })
+
+            // 채팅서버 연결 종료하기 
+            $('#btnClose').click(function(){
+                socket.emit('goodbye')
+            })
+
             // 채팅방 입장 완료 메시지 클라이언트 이벤트 수신기 기능정의 
             socket.on('entryOk', function(msgData){
+                $('#chatHistory').append(`<li>${msgData}</li>`)
+            })
+
+            // 채팅방 퇴장 완료 메시지 "
+            socket.on('leaveOk', function(msgData){
                 $('#chatHistory').append(`<li>${msgData}</li>`)
             })
 
