--- a/DAY16/nodechatapp/views/signup.ejs
+++ b/DAY16/nodechatapp/views/signup.ejs
@@ -54,7 +54,7 @@
 				</div>
 				<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
 					<div class="login-wrapper">
-						<form action="index.html">
+						<form id="signupForm">
 							<div class="login-screen">
 								<div class="login-body">
 									<a href="index.html" class="login-logo">
@@ -62,17 +62,22 @@
 									</a>
 									<h6>Welcome to Quick Chat App,<br>Create your account.</h6>
 									<div class="field-wrapper">
-										<input type="email" autofocus>
+										<input type="email" id="email" autofocus>
 										<div class="field-placeholder">Email ID</div>
 									</div>
 									<div class="field-wrapper">
-										<input type="password">
+										<input type="password" id="password">
 										<div class="field-placeholder">Password</div>
 									</div>
 									<div class="field-wrapper mb-3">
-										<input type="password">
+										<input type="password" id="passwordConfirm">
 										<div class="field-placeholder">Confirm Password</div>
 									</div>
+									<div class="field-wrapper mb-3">
+										<input type="text" id="name">
+										<div class="field-placeholder">Name</div>
+									</div>
+									
 									<div class="actions">
 										<button type="submit" class="btn btn-primary ml-auto">Sign Up</button>
 									</div>
@@ -91,6 +96,48 @@
 		<!-- *************
 			************ Login container end *************
 		************* -->
+
+	<script src="js/jquery.min.js"></script>
+	<script>
+		// Form 태그의 submit 이벤트 발생 시 실행할 함수
+		$('#signupForm').submit(function(){
+			var email = $('#email').val();
+			var password = $('#password').val();
+			var name = $('#name').val();
+
+			// 유효성 검사는 아래에 알아서 추가!!!!
+
+			// 서버로 데이터 전송 (Ajax)
+			var memberData = {
+				'email': email,
+				'password': password,
+				'name': name, 
+				'telephone': ''
+			}
+		
+
+		$.ajax({
+			url:"http://localhost:3000/api/member/signup",
+			type:"POST",
+			data:memberData,
+			success:function(res){
+				
+				console.log(res + 'res.code:', res.code);
+
+				// 정상 로그인 
+				if(res.code == 200){
+					//사용자 브라우저의 Local Storage영역에 서버에서 발급받은 토큰을 저장한다. 
+					location.href ="/login"; // 로그인 완료 시 chat 페이지로 이동 
+				}else{
+					alert("에러발생");
+				}
+			}
+			});
+
+		return false; 
+	});
+
+	</script>
 
 	</body>
 </html>
